02-Core-elements/echo-server-pod-annotations.yml
apiVersion: v1
kind: Pod
metadata:
   name: echo-server-pod-with-annotations
   annotations:
     training: 'true'
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
