02-Core-elements/echo-server-pod-with-labels.yml
apiVersion: v1
kind: Pod
metadata:
   name: echo-server-pod-with-labels
   labels:
     version: v1
     env: production
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
