02-Core-elements/echo-server-pod-with-liveness-probe.yml
apiVersion: v1
kind: Pod
metadata:
   name: echo-server-pod-with-liveness-probe
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server-unhealthy:v1
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          port: 8080
          path: /
        initialDelaySeconds: 5
        failureThreshold: 3
        periodSeconds: 2
        timeoutSeconds: 2
