02-Core-elements/echo-server-pod-with-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: training
---
apiVersion: v1
kind: Pod
metadata:
   name: echo-server-pod-with-namespace
   namespace: training
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
