02-Core-elements/echo-server-pod-with-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
   name: echo-server-pod-with-node-selector
spec:
  nodeSelector:
    type: primary
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
