02-Core-elements/echo-server-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: echo-server-pod
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
