02-Core-elements/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: nginx-pod
spec:
  containers:
    - name: nginx-server
      image: trow.kube-public:31000/test/nginx:alpine
      ports:
        - containerPort: 80
