02-Core-elements/echo-server-service-with-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-service-with-node-port
spec:
  type: NodePort
  #externalTrafficPolicy: Local  # uwaga nie zadziała jeśli nie będzie lokalnie podów
  selector:
    app-name: echo-server
  ports:
    - port: 80
      targetPort: http
      nodePort: 30000
