02-Core-elements/echo-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-service
spec:
  selector:
    app-name: echo-server
  ports:
    - port: 80
      targetPort: http
