02-Core-elements/nginx-stateful-set.yml
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec:
  selector:
    app-name: site
  ports:
    - port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: site
spec:
  replicas: 2
  selector:
    matchLabels:
      app-name: site
  serviceName: site-service
  template:
    metadata:
      labels:
        app-name: site
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
