02-Core-elements/service-for-external-api.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: service-for-external-api
subsets:
  - addresses:
      - ip: 212.77.98.9
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-for-external-api
spec:
  ports:
    - port: 80
